2009-01-09
	* Add namespace
	* RQDA-internal.rd is no loner needed (can be found in rev 57 or version 0.1-6)
	
2008-12-28
	* RQDA needs gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36). Add it to DESCRIPTION file.
	
2008-12-24
	* Fix minor bugs of "Unmark", "AddTo", and "HL_ALL" buttons.
	* add new content to documentation.html.
	
2008-12-21
	* Fix latex related issue in SearchFiles.rd.
	* Fix bug of C2Info: encoding issue.
	* Add new content to documentation.html.
	
2008-12-18 (as version 0.1.6RC3)
	* Rename CrossTable to CrossTwo
	* New function of CrossCode

2008-12-17
	* Improve the relation function and revise MarkCodeFun accordingly.
	* New function of CrossTable for inter-relationship between codes (The name of it may change in the future).

2008-12-15
	* Add help of GetCodingTable.
	* Fix bugs of "Web Search-Baidu" and "Web Search-Sohu" of the case popup menu (now works for UTF-8 locale).
	* Fix bugs of "Add to case/file category" of the fils popup menu.

2008-12-14
	* Add help of SearchFiles and GetFileId.
	* Change the default of ask argument of undelete to TRUE.

2008-12-13
	* New function of gselect.list, gtk version of select.list (Thanks John).
	* Add help of SummaryCoding, improve help of write.FileList.

2008-12-12
	* Fix bugs of SortByTime(), now should work for R < 2.8.0. Fix bug of GetCodingTable and SummaryCoding.
	* New function of RunOnSelected. Use it to replace select.list.
	* Now popup menu of add to case/ category can add multiple files at a time (Files Tab). 
	* New Coding Button: C2Info

2008-12-10
	* New functions of SearchFiles.

2008-12-09
	* New functions to summary codings: SummaryCoding, GetCodingTable.
	* Add documentation.
	
2008-12-08
	* New function of OrderByTime() for computing time order explicitly.
	* "Show Uncoded files only" popup menu will sort the uncoded file by imported time.
	* Add "Show Coded files only" popup menu in Files Tabs and F-cat Tab.