@@ -94,7 +94,7 @@ h1 {
 
 <li>The project summary page you can find <A HREF="http://r-forge.r-project.org/projects/rqda/">here</A>.
 
-<li>Homepage of <A HREF="http://ronggui.huang.googlepages.com/">the author</A>.
+<li>Homepage of <A HREF="http://asrr.r-forge.r-project.org/rghuang.html">the author</A>.
 
 <li><A HREF="http://www.pressure.to/qda/">Weft QDA</A>, a similar project based on <A HREF="http://www.ruby-lang.org/en/">Ruby.</A>
 
